# blockhain-core

./: .gitignore  Cargo.toml  README.md
docs/book/: ch04_02_peer_manager.md
src/: account.rs  block.rs  blockchain.rs  hash.rs  main.rs  storage.rs  transaction.rs
src/consensus/: poa.rs
src/network/: mod.rs  node.rs  peer_manager.rs  protocol.rs
