[package]
name = "budlum-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"

# P2P Networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "ping",
    "identify",
    "mdns",
    "gossipsub",
    "kad",
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
